tests/parser/bad/lib/lmodule-library-cid-let-with.scillib
library TestLib

(* missing some constant name *)
let = True
